# elevenlabs-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
client/: .env.example  package-lock.json  package.json  tsconfig.json
client/src/: elevenlabs-client.ts  example.ts
client/web-ui/: package.json
client/web-ui/src/routes/: +layout.svelte  +page.svelte
client/web-ui/src/routes/script/: +page.svelte
clients/web-ui/: package.json  pnpm-lock.yaml
clients/web-ui/src/: app.html
clients/web-ui/src/lib/: client.ts  elevenlabs-client.ts
clients/web-ui/src/lib/components/: AudioPlayer.svelte
clients/web-ui/src/lib/elevenlabs/: client.ts
clients/web-ui/src/routes/: +page.svelte
clients/web-ui/src/routes/api/download/: +server.ts
clients/web-ui/src/routes/api/history/: +server.ts
clients/web-ui/src/routes/api/tts/: +server.ts
clients/web-ui/src/routes/api/voices/: +server.ts
clients/web-ui/src/routes/history/: +page.svelte
clients/web-ui/src/routes/script/: +page.svelte
src/elevenlabs_mcp/: database.py  elevenlabs_api.py  models.py  server.py
tests/: test_server.py
